traefik/ingressroute-ip.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: devstination

spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: devstination-stack
  namespace: devstination
spec:
  entryPoints:
    - web
#    - websecure
  routes:
    - kind: Rule
      match: Host(`143.198.248.237`)
      services:
        - name: devstination-api
          port: 8080
